--- a/examples/quick/index.html
+++ b/examples/quick/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 	<h1>typenav</h1>
 	<h4>Navigate with your keyboard</h4>
-	<p>Press any letter on the keyboard to navigate. Check the config file to see how to map</p>
+	<p>Press any letter on the keyboard to navigate. Check the config.json file to see how to map</p>
 	<h3 id="pageTitle"></h3>
 </div>
 
