can accept json as param which means can build navs on the fly without need for a config file. think this would be useful

--- a/dev/index.html
+++ b/dev/index.html
@@ -39,8 +39,16 @@
 <script type="text/javascript" src="typenav.js"></script>
 <script type="text/javascript">
 
-	// init typenav	
-	TYPENAV.init();
+	typenav_json = { "nav":[
+		{"keys":["a"],"url":"#abracadabra"},
+		{"keys":["b"],"url":"#barbie"}
+		]
+	}
+
+	// init typenav
+	TYPENAV.init( typenav_json );
+	//TYPENAV.init( 'config.json' );
+	//TYPENAV.init();
 
 	// simple example responding to hash changes when keys are changed
 	window.onhashchange = onURLUpdate;
